# Multimodal_Forecasting

./: .gitignore  README.md  environment.yml  pyproject.toml  requirement.txt
baseline_model/: input_copy.py  multimodal.py  multimodal_inContext.py  multimodal_zeroshot.py  nlinear.py  nlinear_textEmbedding.py
config/baseline/: climate.yaml  medical.yaml
config/hybrid/: climate.yaml  climate_bge.yaml  medical.yaml  medical_bge.yaml
data/: climate_2014_2023_final.csv
data/medical/: patient_10576.csv  patient_10910.csv  patient_10977.csv  patient_1122.csv  patient_11465.csv  patient_11973.csv  patient_12096.csv  patient_12515.csv  patient_12578.csv  patient_12652.csv  patient_12680.csv  patient_13037.csv  patient_14151.csv  patient_14273.csv  patient_15032.csv  patient_15114.csv  patient_15204.csv  patient_15432.csv  patient_15482.csv  patient_15618.csv  patient_15989.csv  patient_16108.csv  patient_16146.csv  patient_1690.csv  patient_16957.csv  patient_17601.csv  patient_18040.csv  patient_18497.csv  patient_19956.csv  patient_20082.csv  patient_20415.csv  patient_20803.csv  patient_21316.csv  patient_2160.csv  patient_2218.csv  patient_22188.csv  patient_22875.csv  patient_23705.csv  patient_24501.csv  patient_24974.csv  (+33 more)
data/preprocess/: PROMPTS.py  batch_processor.py  opeani_batch_processor.py  preprocess.py
model/: hybrid.py  multihead_mlp.py
notebooks/: plot.ipynb  text_evaluation.ipynb
src/: evaluate.py  hybrid.py  openai_evaluator.py
utils/: batch_inference.py  config.py  dataset.py  modelchat.py  tokens.py  utils.py
