[tool.poetry]
name = "multimodal-forecasting"
version = "0.1.0"
description = ""
authors = ["howard <cht028@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2.0.0"
darts = "^0.31.0"
pandas = "^2.2.3"
peft = "^0.13.2"
wandb = "^0.18.5"
bitsandbytes = "^0.44.1"
boto3 = "^1.35.49"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.2.1"
rouge-score = "^0.1.2"
xformers = "^0.0.28.post2"
torch = "^2.5.0"
torchvision = "^0.20.0"
transformers = "^4.46.0"
trl = "^0.11.4"
matplotlib = "^3.9.2"
datasets = "^3.0.2"
tdqm = "^0.0.1"
accelerate = "^1.0.1"
num2words = "^0.5.13"
deepspeed = "^0.15.3"
ninja = "^1.11.1.1"
s5cmd = "^0.2.0"
flash-attention = "^1.0.0"
nltk = "^3.9.1"
openai = "^1.52.2"
scikit-learn = "^1.5.2"
pygments = "^2.18.0"
unsloth = {git = "https://github.com/unslothai/unsloth.git", extras = ["colab-new"]}
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
